--- a/myproject/templates/app/foodListmodal.html
+++ b/myproject/templates/app/foodListmodal.html
@@ -1,11 +1,10 @@
  {% load static %}
- <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+ <div class="modal fade" id="foodListmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header border-0 align-self-start">
           <h5 class="modal-title" id="exampleModalLabel"></h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           <div class="card p-3" style="">
@@ -28,16 +27,16 @@
                 <div class="col-6">
                   <p class="card-text">จำนวนผู้เข้าใช้</p>
                 </div>
-                <div class="col-6"><input type="number" min="1" max="100" /></div>
+                <div class="col-6"><input type="number" /></div>
               </div>
             </div>
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
-            รายการอาหาร
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
+            Cancel
           </button>
-          <button type="button" class="btn btn-secondary">ยืนยัน</button>
+          <button type="button" class="btn btn-success" data-bs-dismiss="modal">Confirm</button>
         </div>
       </div>
     </div>
