--- a/myproject/templates/app/workerProfile.html
+++ b/myproject/templates/app/workerProfile.html
@@ -1,11 +1,10 @@
 {% extends 'app/base.html' %}
 {% load static %}
 {% block content %}
-<div class="border mt-5 pt-3">
-    <div class="row">
+    <div class="row border border-3 mt-5 pt-3">
         <div class="col-4 mt-4">
             <div class="row-md-4">
-                <div class="card ms-5 mb-0" style="width: 18rem;">
+                <div class="card ms-5 mb-0" style="max-width : 65%; max-height : 50%">
                     <img src="{% static 'images/profile.png' %}" class="card-img-top" alt="...">
                     <div class="d-grid">
                         <button class="btn btn-primary" type="button">Change photo</button>
@@ -195,7 +194,7 @@
             </div>
         </div>
     </div>
-</div>
+
 
 
 {% endblock content %}
