--- a/myproject/templates/users/signup.html
+++ b/myproject/templates/users/signup.html
@@ -14,69 +14,84 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="{% static 'js/datePicker.js' %}"></script>
     <title>Signup</title>
 
 </head>
 
 <body>
     <div class="container">
+        {% for message in messages  %}
+        <div class="alert alert-danger" role="alert">
+            <h1>
+                {{message}}
+            </h1>
+        </div>
+        {% endfor %}
         <div class="card mt-4 rounded">
             <h5 class="card-header">Registeration</h5>
-            <form class="mt-2 p-2" action="addForm" method="post">
+            <form id="userForm" class="mt-2 p-2" action="" method="post">
                 {% csrf_token %}
                 <div class="row mb-3">
                     <label for="fName" class="col-sm-2 col-form-label">Name</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control" id="fName" name="fName" placeholder="xxxxx">
+                        {{form.fName}}
                         <div id="fName" class="form-text">firstname</div>
                     </div>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control" id="lName" name="lName" placeholder="xxxxx">
+                        {{form.lName}}
                         <div id="lName" class="form-text">lastname</div>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label for="password" class="col-sm-2 col-form-label">Password</label>
                     <div class="col-sm-5">
-                        <input type="password" class="form-control" id="password" name="password">
+                        {{form.password}}
                         <div id="Password" class="form-text">Password</div>
                     </div>
                     <div class="col-sm-5">
-                        <input type="password" class="form-control" id="ConfirmPassword" name="ConfirmPassword">
+                        {{form.confirmPassword}}
                         <div id="ConfirmPassword" class="form-text">ConfirmPassword</div>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label for="email" class="col-sm-2 col-form-label">Email</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="email" name="email"
-                            placeholder="superYenYen@getADatabase.com">
+                        {{form.email}}
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <label for="phone" class="col-sm-2 col-form-label">Phone</label>
+                    <label for="tel" class="col-sm-2 col-form-label">tel</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="phone" name="phone" placeholder="086-485-8875">
-                        <div id="phone" class="form-text">Phone number</div>
+                        {{form.tel}}
+                        <div id="tel" class="form-text">telephone number</div>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <label for="dob" class="col-sm-2 col-form-label">Gender</label>
+                    <label for="gender" class="col-sm-2 col-form-label">Gender</label>
                     <div class="col-sm-10">
-                        <select class="form-select" aria-label="">
-                            <option selected>Gender</option>
-                            <option value="M">Male</option>
-                            <option value="F">Female</option>
-                            <option value="O">Others</option>
-                        </select> </div>
+                        {{form.gender}}
+                    </div>
                 </div>
                 <div class="row mb-3">
                     <label for="dob" class="col-sm-2 col-form-label">DOB</label>
                     <div class="col-sm-10">
-                        <input type="date" class="form-control" name="dob" id="dob" placeholder="">
+                        {{form.dob}}
                     </div>
                 </div>
+                {% if form.errors %}
+                {% for field in form %}
+                {% for error in field.errors %}
+                <div class="alert alert-danger">
+                    <strong>{{ error|escape }}</strong>
+                </div>
+                {% endfor %}
+                {% endfor %}
+                {% for error in form.non_field_errors %}
+                <div class="alert alert-danger">
+                    <strong>{{ error|escape }}</strong>
+                </div>
+                {% endfor %}
+                {% endif %}
                 <div class="row mb-3 justify-content-end">
                     <button type="cancel" class="btn btn-danger col-2 align-self-end me-4">Cancel</button>
                     <button type="submit" class="btn btn-primary col-2 align-self-end me-4 ">Register</button>
@@ -85,5 +100,6 @@
         </div>
     </div>
 </body>
+<script src="{% static 'js/main.js' %}"></script>
 
 </html>
