--- a/myproject/templates/app/foodList.html
+++ b/myproject/templates/app/foodList.html
@@ -106,7 +106,7 @@
     <div class="card h-100">
       <img src="{% static 'images/Burger.jpg' %}" class="card-img-top" style="height:50%;">
       <div class="card-body">
-        <h5 class="card-title">Burger</h5>
+        <h5 class="card-title">Burger2</h5>
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
             data-bs-toggle="dropdown" aria-expanded="false">
@@ -126,7 +126,7 @@
     <div class="card h-100">
       <img src="{% static 'images/Lasagna.jpg' %}" class="card-img-top" style="height:50%;" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Lasagna</h5>
+        <h5 class="card-title">Lasagna2</h5>
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
             data-bs-toggle="dropdown" aria-expanded="false">
@@ -146,7 +146,7 @@
     <div class="card h-100">
       <img src="{% static 'images/bolognese.jpg' %}" class="card-img-top" style="height:50%;" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Spaghetti Bolognese</h5>
+        <h5 class="card-title">Spaghetti Bolognese2</h5>
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
             data-bs-toggle="dropdown" aria-expanded="false">
@@ -166,7 +166,7 @@
     <div class="card h-100">
       <img src="{% static 'images/carbonara.jpg' %}" class="card-img-top" style="height:50%;" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Spaghetti Carbonara</h5>
+        <h5 class="card-title">Spaghetti Carbonara2</h5>
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
             data-bs-toggle="dropdown" aria-expanded="false">
@@ -186,7 +186,7 @@
     <div class="card h-100">
       <img src="{% static 'images/SquidInkPasta.jpg' %}" class="card-img-top" style="height:50%;" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Squid Ink pasta seafood</h5>
+        <h5 class="card-title">Squid Ink pasta seafood2</h5>
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
             data-bs-toggle="dropdown" aria-expanded="false">
