--- a/myproject/templates/app/foodListmodal.html
+++ b/myproject/templates/app/foodListmodal.html
@@ -1,85 +1,169 @@
  {% load static %}
 
  <div class="modal fade" id="foodListmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header border-0 align-self-start">
-          <h5 class="modal-title" id="exampleModalLabel"></h5>
-        </div>
-        <div class="modal-body">
-          <div class="card p-3" style="">
-            <div class="row">
-              <img src="{% static 'images/foodEx.jpg' %}" class="imgBg" alt="Responsive image" />
-              <img src="{% static 'images/foodEx2.jpg' %}" class="imgCollab" alt="Responsive image" />
-            </div>
-            <div class="card-body">
-              <h2 class="card-title">ร้านอาหาร : ร้านเจ๊โอว</h2>
-              <p class="card-text">ประเภท : ซีฟู๊ด, อาหารตามสั่ง</p>
-              <div class="row">
-                <div class="col-6 mb-3">
-                  <p class="card-text">เวลาที่จอง</p>
-                </div>
-                <div class="col-6">
-                  <input type="datetime-local" id="queuetime" name="queuetime" style="max-width: 99%;" />
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-6">
-                  <p class="card-text">จำนวนผู้เข้าใช้</p>
-                </div>
-                <div class="col-6"><input type="number" /></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
-            Cancel
-          </button>
-          <button type="button" class="btn btn-success" data-bs-dismiss="modal">Confirm</button>
-        </div>
-      </div>
-    </div>
-  </div>
+   <div class="modal-dialog">
+     <div class="modal-content">
+       <div class="modal-header border-0 align-self-start">
+         <h5 class="modal-title" id="exampleModalLabel"></h5>
+       </div>
+       <div class="modal-body">
+         <div class="card p-3" style="">
+           <table class="table table-md">
+             <tr class="text-center">
+               <th>Menu</th>
+               <th>Remove</th>
+             </tr>
 
-  <div class="modal fade" id="AddingfoodListmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header border-0 align-self-start">
-          <h5 class="modal-title" id="exampleModalLabel"></h5>
-        </div>
-        <div class="modal-body">
-          <div class="card p-3" style="">
-            <div class="row">
-              <img src="{% static 'images/foodEx.jpg' %}" class="imgBg" alt="Responsive image" />
-              <img src="{% static 'images/foodEx2.jpg' %}" class="imgCollab" alt="Responsive image" />
-            </div>
-            <div class="card-body">
-              <h2 class="card-title">ร้านอาหาร : ร้านเจ๊โอว</h2>
-              <p class="card-text">ประเภท : ซีฟู๊ด, อาหารตามสั่ง</p>
-              <div class="row">
-                <div class="col-6 mb-3">
-                  <p class="card-text">เวลาที่จอง</p>
-                </div>
-                <div class="col-6">
-                  <input type="datetime-local" id="queuetime" name="queuetime" style="max-width: 99%;" />
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-6">
-                  <p class="card-text">จำนวนผู้เข้าใช้</p>
-                </div>
-                <div class="col-6"><input type="number" /></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
-            Cancel
-          </button>
-          <button type="button" class="btn btn-success" data-bs-dismiss="modal">Confirm</button>
-        </div>
-      </div>
-    </div>
-  </div>
+             <tr>
+               <td class="text-start ">Burger</td>
+               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
+                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
+             </tr>
+             <tr>
+               <td class="text-start ">Lasagna</td>
+               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
+                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
+             </tr>
+             <tr>
+               <td class="text-start ">Spaghetti Bolognese</td>
+               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
+                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
+             </tr>
+             <tr>
+               <td class="text-start ">Spaghetti Carbonara</td>
+               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
+                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
+             </tr>
+             <tr>
+               <td class="text-start ">Spaghetti Squid Ink pasta seafood</td>
+               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
+                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
+             </tr>
+             <tr>
+               <td class="text-start ">Burger2</td>
+               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
+                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
+             </tr>
+             <tr>
+               <td class="text-start ">Lasagna2</td>
+               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
+                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
+             </tr>
+             <tr>
+               <td class="text-start ">Spaghetti Bolognese2</td>
+               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
+                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
+             </tr>
+             <tr>
+               <td class="text-start ">Spaghetti Carbonara2</td>
+               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
+                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
+             </tr>
+             <tr>
+               <td class="text-start ">Spaghetti Squid Ink pasta seafood2</td>
+               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
+                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
+             </tr>
+
+           </table>
+           <button class="btn btn-primary" type="button" data-bs-target="#AddingfoodListmodal" data-bs-toggle="modal"
+             data-bs-dismiss="modal">+</button>
+
+
+         </div>
+       </div>
+       <div class="modal-footer">
+         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
+           Cancel
+         </button>
+         <button type="button" class="btn btn-success" data-bs-dismiss="modal">Save</button>
+       </div>
+     </div>
+   </div>
+ </div>
+
+ <div class="modal fade " id="AddingfoodListmodal" tabindex="-1" aria-labelledby="exampleModalLabe2" aria-hidden="true">
+   <div class="modal-dialog modal-dialog-centered">
+     <div class="modal-content ">
+       <div class="modal-header border-0 align-self-start">
+         <h5 class="modal-title" id="exampleModalLabe2"></h5>
+       </div>
+       <div class="modal-body">
+         <div class="card p-3" style="">
+           <table class="table table-md">
+             <tr class="text-center">
+               <th>Menu</th>
+               <th>Image</th>
+             </tr>
+             <tr id="container">
+               <td class=" col-6"><input type="text" class="form-control" aria-label="Sizing example input"
+                   aria-describedby="inputGroup-sizing-sm"></td>
+               <td class="col-6"><input type="file" class="form-control" id="inputGroupFile02"></td>
+             </tr>
+             <tr id="container">
+               <td class=" col-6"><input type="text" class="form-control" aria-label="Sizing example input"
+                   aria-describedby="inputGroup-sizing-sm"></td>
+               <td class="col-6"><input type="file" class="form-control" id="inputGroupFile02"></td>
+             </tr>
+             <tr id="container">
+               <td class=" col-6"><input type="text" class="form-control" aria-label="Sizing example input"
+                   aria-describedby="inputGroup-sizing-sm"></td>
+               <td class="col-6"><input type="file" class="form-control" id="inputGroupFile02"></td>
+             </tr>
+             <tr id="container">
+               <td class=" col-6"><input type="text" class="form-control" aria-label="Sizing example input"
+                   aria-describedby="inputGroup-sizing-sm"></td>
+               <td class="col-6"><input type="file" class="form-control" id="inputGroupFile02"></td>
+             </tr>
+             <tr id="container">
+               <td class=" col-6"><input type="text" class="form-control" aria-label="Sizing example input"
+                   aria-describedby="inputGroup-sizing-sm"></td>
+               <td class="col-6"><input type="file" class="form-control" id="inputGroupFile02"></td>
+             </tr>
+             <tr id="container">
+               <td class=" col-6"><input type="text" class="form-control" aria-label="Sizing example input"
+                   aria-describedby="inputGroup-sizing-sm"></td>
+               <td class="col-6"><input type="file" class="form-control" id="inputGroupFile02"></td>
+             </tr>
+             <tr id="container">
+               <td class=" col-6"><input type="text" class="form-control" aria-label="Sizing example input"
+                   aria-describedby="inputGroup-sizing-sm"></td>
+               <td class="col-6"><input type="file" class="form-control" id="inputGroupFile02"></td>
+             </tr>
+           </table>
+
+
+           <div class="modal-footer">
+             <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
+               Cancel
+             </button>
+             <button type="button" class="btn btn-success" data-bs-dismiss="modal">Save</button>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
+
+
+
+
+ <div class="modal fade " id="DeletingfoodListmodal" tabindex="-1" aria-labelledby="exampleModalLabe3"
+   aria-hidden="true">
+   <div class="modal-dialog modal-dialog-centered">
+     <div class="modal-content ">
+       <div class="modal-header border-0 align-self-start">
+         <h5 class="modal-title" id="exampleModalLabe3"></h5>
+       </div>
+       <div class="modal-body">
+         <h5>Are you sure you wat to delete Menu:... ?</h5>
+       </div>
+       <div class="modal-footer">
+         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+           Cancel
+         </button>
+         <button type="button" class="btn btn-danger" data-bs-target="#foodListmodal" data-bs-toggle="modal" data-bs-dismiss="modal">Confirm</button>
+       </div>
+     </div>
+   </div>
+ </div>
