--- a/myproject/templates/app/map.html
+++ b/myproject/templates/app/map.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="row justify-content-center">
+<div class="row justify-content-center mt-4">
     <div class="col-xl-8 ">
         <div class="card p-3" style="">
             <div class="row ">
@@ -8,25 +8,29 @@
             <div class="card-body">
                 <h4 class="card-title">
                     <i class="fas fa-map-marker-alt text-secondary"></i>
-                    <span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, necessitatibus?</span>
+                    <span>{{restaurant.fullAddress}}</span>
                 </h4>
             </div>
             <div class="card-body">
                 <h4 class="card-title">
-                    <i class="fab fa-instagram text-secondary"></i>
-                    <span> Jay Och</span>
+                    <a href="www.instagram.com" class="text-decoration-none text-reset">
+                        <i class="fab fa-instagram text-secondary"></i>
+                        <span> Jay Och</span>
+                    </a>
                 </h4>
             </div>
             <div class="card-body">
                 <h4 class="card-title">
                     <i class="fas fa-phone-alt text-secondary"></i>
-                    <span> 087-658-4475</span>
+                    <span>{{restaurant.fullPhone}}</span>
                 </h4>
             </div>
             <div class="card-body">
                 <h4 class="card-title">
-                    <i class="fab fa-facebook-square text-secondary"></i>
-                    <span> Jay Och</span>
+                    <a href="www.facebook.com" class="text-decoration-none text-reset">
+                        <i class="fab fa-facebook-square text-secondary"></i>
+                        <span> Jay Och</span>
+                    </a>
                 </h4>
             </div>
         </div>
