--- a/myproject/templates/app/base.html
+++ b/myproject/templates/app/base.html
@@ -20,11 +20,11 @@
         crossorigin="anonymous" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 
-    
+
 
 
     <title>{% block title %}My amazing site{% endblock %}</title>
-    
+
 </head>
 
 <body>
@@ -35,5 +35,13 @@
         {% endblock content %}
     </div>
 </body>
+<footer class="bg-light text-center text-lg-start mt-5">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2021 Copyright:
+        <a class="text-dark" href="">YENYEN</a>
+    </div>
+    <!-- Copyright -->
+</footer>
 
 </html>
