--- a/myproject/templates/app/card3Col.html
+++ b/myproject/templates/app/card3Col.html
@@ -1,20 +1,26 @@
 {% load static %}
 {% block content %}
 
-<div class="col">
-    <div class="card p-2 border-0">
-        <img src="{% static 'images/foodEx.jpg' %}" class="card-img resImg" alt="...">
-        <div class="card-body">
-            <h2 class="card-title">{{restaurant.resTitle}}</h2>
-            <p class="card-text">{{restaurant.resDesc}}</p>
-            <p class="card-text">
-                <i class="fas fa-star text-warning"></i>
-                <span> 4.2</span>
-                <i class="far fa-clock text-secondary"></i>
-                <span> 15 min</span>
-                <i class="fas fa-map-marker-alt text-secondary"></i>
-                <span> 2 km</span>
-            </p>
+<div class="col-md-4">
+    <div class="card p-3 mb-2 ">
+        <div class="d-flex justify-content-between">
+            <a href="{% url 'resCard' restaurant.resID %}">
+                <img src="{% static 'images/foodEx.jpg' %}" class="card-img resImg mx-auto d-block">
+            </a>
+        </div>
+        <div class="mt-2">
+            <div class="card-body d-flex flex-column">
+                <h4 class="card-title">{{restaurant.resNameTH}}</h4>
+                <p class="card-text mt-auto">{{restaurant.categoryID.categoryName}}</p>
+                <p class="card-text ">
+                    <i class="fas fa-star text-warning"></i>
+                    <span> 4.2</span>
+                    <i class="far fa-clock text-secondary"></i>
+                    <span> 15 min</span>
+                    <i class="fas fa-map-marker-alt text-secondary"></i>
+                    <span> 2 km</span>
+                </p>
+            </div>
         </div>
     </div>
 </div>
