--- a/myproject/templates/app/index.html
+++ b/myproject/templates/app/index.html
@@ -1,11 +1,32 @@
 {% extends 'app/base.html' %}
 {% block content %}
+<div class="input-group rounded-lg mt-2">
+    <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+        aria-describedby="search-addon" />
+    <span class="input-group-text border-0" id="search-addon">
+        <i class="fas fa-search"></i>
+    </span>
+</div>
+
 <div class="row row-cols-4 row-cols-md-6">
-    {% for categoryTitle in categoryTitles %}
-    {% include 'app/categoryCard.html' with categoryTitle=categoryTitle%}
+    {% for category in categorys %}
+    {% include 'app/categoryCard.html' with category=category%}
     {% endfor %}
 </div>
-<div class="row row-cols-4 row-cols-md-3">
-    {% include 'app/Card3Col.html' with restaurant=restaurant %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item"><a href="#">Library</a></li>
+                <li class="breadcrumb-item active" aria-current="page"><a href="#">Data</a></li>
+            </ol>
+        </nav>
+    </div>
+</nav>
+<div class="row">
+    {% for restaurant in restaurants %}
+    {% include 'app/card3Col.html' with restaurant=restaurant %}
+    {% endfor %}
 </div>
 {% endblock content %}
