--- a/myproject/templates/app/navbar.html
+++ b/myproject/templates/app/navbar.html
@@ -11,41 +11,44 @@
 </style>
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-YENYEN">
-        <div class="navbar-inner container-fluid">
-            <div class ="d-flex justify-content-start d-flex align-items-center">
-                <a class="navbar-brand" style="margin: 0px 15px" href="#">YENYEN</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" style="margin: 0px 15px; font-size: 18px" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Restaurant
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Italian cuisine</a></li>
-                            <li><a class="dropdown-item" href="#">Thai cuisine</a></li>
-                            <li><a class="dropdown-item" href="#">Chinese cuisine</a></li>
-                        </ul>
-                        </li>
+    <div class="navbar-inner container-fluid">
+        <div class="d-flex justify-content-start d-flex align-items-center">
+            <a class="navbar-brand" style="margin: 0px 15px" href="/">YENYEN</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" style="margin: 0px 15px; font-size: 18px" href="#"
+                        id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Restaurant
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="#">Italian cuisine</a></li>
+                        <li><a class="dropdown-item" href="#">Thai cuisine</a></li>
+                        <li><a class="dropdown-item" href="#">Chinese cuisine</a></li>
                     </ul>
-            </div>
-            <div class="nav-item">
-                <div class="card" style="width: 27rem">
-                    <div class="card-body"  style = "padding: 16px 25px">
+                </li>
+            </ul>
+        </div>
+        <div class="nav-item">
+            <div class="card" style="width: 27rem">
+                <div class="card-body" style="padding: 16px 25px">
                     <h5 class="card-title">Queue Number : -</h5>
                     <class class="card-subtitle mb-2 text-muted">Status : No queue</class>
-                    </div>
                 </div>
             </div>
-            <div>
-                <a href= "{%url 'signup'%}">
-                    <button type="button" class="btn btn-primary btn-lg" style="background-color:#D0BDF4; margin: 0px 15px">Sign up</button>
-                </a>
-                <a href= "{%url 'login'%}">
-                    <button type="button" class="btn btn-outline-success btn-lg" style="margin: 0px 15px">Login</button>
-                </a>
-            </div>
         </div>
+        <div>
+            <a href="{%url 'users_signup'%}">
+                <button type="button" class="btn btn-primary btn-lg"
+                    style="background-color:#D0BDF4; margin: 0px 15px">Sign up</button>
+            </a>
+            <a href="{%url 'users_login'%}">
+                <button type="button" class="btn btn-outline-success btn-lg" style="margin: 0px 15px">Login</button>
+            </a>
+        </div>
+    </div>
 </nav>
