--- a/myproject/templates/app/resCard.html
+++ b/myproject/templates/app/resCard.html
@@ -52,7 +52,7 @@
     </div>
   </div>
 
-  {% include 'app/modal.html' %}
+  {% include 'app/modal_resCard.html' %}
   {% include 'app/map.html' %} 
   {% endblock content %}
 </div>
