--- a/myproject/templates/app/resCard.html
+++ b/myproject/templates/app/resCard.html
@@ -37,7 +37,7 @@
                 <span class="card-text">8 Mins.</span>
               </p>
               <p class="card-text">
-                <a href="{%url 'foodList'%}">
+                <a href="{% url 'foodList' restaurant.resID %}">
                   <button type="button" class="btn btn-primary btn-sm">
                     รายการอาหาร
                   </button>
