--- a/myproject/templates/app/foodList.html
+++ b/myproject/templates/app/foodList.html
@@ -2,28 +2,27 @@
 {% load static %}
 {% block content %}
 <div class="row  g-4 d-flex justify-content-left m-3">
-
+  {% for menu in menus %}
   <div class="col-3">
     <div class="card h-100">
-      <img src="{% static 'images/Burger.jpg' %}" class="card-img-top" style="height:50%;">
-      <div class="card-body">
-        <h5 class="card-title">Burger</h5>
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            Food Status
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="#">Available</a></li>
-            <li><a class="dropdown-item" href="#">Not Avalable</a></li>
-            <li><a class="dropdown-item" href="#">Not Shown</a></li>
-          </ul>
+      <img src="{{menu.picture.url}}" class="card-img-top" style="height:50%;">
+      <div class="card-body d-flex flex-column">
+        <h5 class="card-title">{{menu.menuNameEN}}</h5>
+        {% if menu.avaliable %}
+        <div class="alert alert-success mt-auto" role="alert">
+          Avaliable
         </div>
+        {% else %}
+        <div class="alert alert-danger mt-auto" role="alert">
+          Not avaliable
+        </div>
+        {% endif %}
       </div>
     </div>
   </div>
+  {% endfor %}
 
-  <div class="col-3">
+  {% comment %} <div class="col-3">
     <div class="card h-100">
       <img src="{% static 'images/Lasagna.jpg' %}" class="card-img-top" style="height:50%;" alt="...">
       <div class="card-body">
@@ -201,7 +200,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> {% endcomment %}
 <div class="row  g-4 d-flex justify-content-end m-3">
   <div class="col-3">
     <button type="button" class="btn btn-warning btn-lg me-3" data-bs-toggle="modal" data-bs-target="#foodListmodal">
@@ -210,5 +209,5 @@
     <button type="button" class="btn btn-primary btn-lg">Submit</button>
   </div>
 </div>
-{% include 'app/foodListmodal.html' %}
+{% include 'app/foodListmodal.html' with menus=menus %}
 {% endblock content %}
