--- a/myproject/templates/app/modal.html
+++ b/myproject/templates/app/modal.html
@@ -34,7 +34,7 @@
          </div>
        </div>
        <div class="modal-footer">
-         <a href="{%url 'foodList'%}">
+         <a href="{%url 'foodList' restaurant.resID %}">
            <button type="button" class="btn btn-primary">
              รายการอาหาร
            </button>
