--- a/myproject/templates/app/modal_editProfile.html
+++ b/myproject/templates/app/modal_editProfile.html
@@ -9,8 +9,8 @@
              </div>
              <div class="modal-body">
              <h1>Edit Profile</h1>
-                 <div class="card p-3" style="">
-                     <form>
+                 <div class="card p-3 " style="">
+                     <form class ="m-3">
                          <div class="form-row">
                              <div class="col-md-6">
                                  <label >Name</label>
